# Medical-Appointment-AI-Assistant

./: README.md  cli.py  pyproject.toml  server.py
data/: test_scenarios.json
src/agents/: graph.py
src/agents/middleware/: __init__.py  call_limits.py  context_editing.py  fallback.py  hitl.py  moderation.py  pii.py  retry.py
src/tools/: appointment_tools.py
src/utils/: logger.py
static/patient/: index.html
static/staff/: index.html
tests/: test_middleware.py
